; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ixp4xx/extr_common-pci.c_ixp4xx_pci_platform_notify.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-ixp4xx/extr_common-pci.c_ixp4xx_pci_platform_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i8*, i8**, i32* }

@pci_bus_type = common dso_local global i32 0, align 4
@SZ_64M = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @ixp4xx_pci_platform_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ixp4xx_pci_platform_notify(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %3 = load %struct.device*, %struct.device** %2, align 8
  %4 = getelementptr inbounds %struct.device, %struct.device* %3, i32 0, i32 2
  %5 = load i32*, i32** %4, align 8
  %6 = icmp eq i32* %5, @pci_bus_type
  br i1 %6, label %7, label %19

7:                                                ; preds = %1
  %8 = load i8*, i8** @SZ_64M, align 8
  %9 = getelementptr i8, i8* %8, i64 -1
  %10 = load %struct.device*, %struct.device** %2, align 8
  %11 = getelementptr inbounds %struct.device, %struct.device* %10, i32 0, i32 1
  %12 = load i8**, i8*** %11, align 8
  store i8* %9, i8** %12, align 8
  %13 = load i8*, i8** @SZ_64M, align 8
  %14 = getelementptr i8, i8* %13, i64 -1
  %15 = load %struct.device*, %struct.device** %2, align 8
  %16 = getelementptr inbounds %struct.device, %struct.device* %15, i32 0, i32 0
  store i8* %14, i8** %16, align 8
  %17 = load %struct.device*, %struct.device** %2, align 8
  %18 = call i32 @dmabounce_register_dev(%struct.device* %17, i32 2048, i32 4096)
  br label %19

19:                                               ; preds = %7, %1
  ret i32 0
}

declare dso_local i32 @dmabounce_register_dev(%struct.device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
